--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -40,13 +40,18 @@
 }
 
 :root {
-  --red: #EA3160;
+  --dark-blue: #001e2b;
+  --dark-green: #00684a;
+  --light-green: #00db9d;
+  --black: #061621;
+  --gray: #99a3a1;
+  --white: #f5f6f7;
 }
 
 
 html, body {
   font-size: 20px;
-  color: #1a1a1a;
-  background: #f5f5f5;
+  color: var(--black);
+  background: var(--white);
   font-family: 'Gilroy', sans-serif;
 }
