--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -45,6 +45,8 @@
   --light-green: #00db9d;
   --black: #061621;
   --gray: #99a3a1;
+  --dark-gray: #707776;
+  --light-gray: #dce6e4;
   --white: #f5f6f7;
 }
 
