--- a/app/components/Home/Faq/Faq.module.css
+++ b/app/components/Home/Faq/Faq.module.css
@@ -1,3 +1,115 @@
 .wrapper {
   padding: 75px 16px;
 }
+
+.container {
+  max-width: 1000px;
+  margin: auto;
+}
+
+.header {
+  font-weight: 700;
+  text-align: center;
+  font-size: 200%;
+  margin-bottom: 75px;
+}
+
+.questionContainer {
+  border-bottom: 1px solid var(--mid-gray);
+  overflow: hidden;
+  transition: 300ms ease;
+}
+
+.questionContainer:hover {
+  background: var(--light-gray);
+}
+
+.question {
+  height: 75px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 16px;
+  font-size: 90%;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 300ms;
+}
+
+.answer {
+  padding-bottom: 20px;
+  padding-left: 16px;
+  padding-right: 16px;
+  font-weight: 500;
+  font-size: 80%;
+  opacity: 0;
+  transform: scale(0.75);
+  width: fit-content;
+}
+
+.boxContainer {
+  height: 18px;
+  max-height: 18px;
+  width: 18px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.vertical {
+  height: 100%;
+  width: 2px;
+  position: absolute;
+  background: var(--dark-green);
+  transition: 300ms;
+}
+
+.horizontal {
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  background: var(--dark-green);
+}
+
+.spin {
+  animation: spin 300ms linear forwards;
+}
+
+.undoSpin {
+  animation: undoSpin 300ms linear forwards;
+}
+
+.appear {
+  animation: appear 300ms ease forwards;
+  animation-delay: 300ms;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(270deg);
+  }
+}
+
+@keyframes undoSpin {
+  from {
+    transform: rotate(270deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
