--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,34 +1,34 @@
 @font-face {
   font-family: "Gilroy";
-  src: url('../public/assets/fonts/Gilroy-Regular.ttf') format('truetype');
+  src: url("../public/assets/fonts/Gilroy-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Gilroy';
-  src: url('../public/assets/fonts/Gilroy-Medium.ttf') format('truetype');
+  font-family: "Gilroy";
+  src: url("../public/assets/fonts/Gilroy-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Gilroy';
-  src: url('../public/assets/fonts/Gilroy-SemiBold.ttf') format('truetype');
+  font-family: "Gilroy";
+  src: url("../public/assets/fonts/Gilroy-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Gilroy';
-  src: url('../public/assets/fonts/Gilroy-Bold.ttf') format('truetype');
+  font-family: "Gilroy";
+  src: url("../public/assets/fonts/Gilroy-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Gilroy';
-  src: url('../public/assets/fonts/Gilroy-ExtraBold.ttf') format('truetype');
+  font-family: "Gilroy";
+  src: url("../public/assets/fonts/Gilroy-ExtraBold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
 }
@@ -41,19 +41,22 @@
 
 :root {
   --dark-blue: #001e2b;
+  --darker-green: #002b24;
   --dark-green: #00684a;
   --light-green: #00db9d;
   --black: #061621;
+  --true-black: #000;
   --gray: #99a3a1;
+  --mid-gray: #b5c0be;
   --dark-gray: #707776;
   --light-gray: #dce6e4;
   --white: #f5f6f7;
 }
 
-
-html, body {
+html,
+body {
   font-size: 20px;
-  color: var(--black);
+  color: var(--true-black);
   background: var(--white);
-  font-family: 'Gilroy', sans-serif;
+  font-family: "Gilroy", sans-serif;
 }
