--- a/app/components/MobileMenu/MobileMenu.module.css
+++ b/app/components/MobileMenu/MobileMenu.module.css
@@ -47,3 +47,14 @@
   opacity: 1;
   transform: translateX(10px);
 }
+
+.overlay {
+  height: 100vh;
+  width: 100%;
+  background: #00000067;
+  backdrop-filter: blur(5px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9998;
+}
