added media queries for responsiveness

--- a/app/components/Footer/Footer.module.css
+++ b/app/components/Footer/Footer.module.css
@@ -28,7 +28,7 @@
 
 .sectionHeader {
   color: var(--white);
-  font-size: 90%;
+  font-size: 85%;
   font-weight: 500;
   margin-bottom: 25px;
 }
@@ -54,7 +54,25 @@
 
 .copyright {
   font-size: 65%;
-  color: var(--mid-gray);
+  color: var(--gray);
   margin-top: 20px;
   padding-left: 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .flexContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .link {
+    text-align: center;
+  }
+  .sectionHeader {
+    text-align: center;
+    margin-top: 50px;
+  }
+  .copyright {
+    text-align: center;
+    margin-top: 50px;
+  }
 }
