--- a/app/components/Home/Info/Info.module.css
+++ b/app/components/Home/Info/Info.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  padding: 100px 16px;
+  padding: 75px 16px;
   background: var(--dark-blue);
 }
 
@@ -51,5 +51,41 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 50px;
+  margin-right: 30px;
+}
+
+@media screen and (max-width: 700px) {
+  .flexContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .featureContainer {
+    margin-bottom: 60px;
+    max-width: 400px;
+    margin-right: 0px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .header {
+    font-size: 150%;
+  }
+  .subHeader {
+    font-size: 85%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .header {
+    font-size: 130%;
+  }
+  .subHeader {
+    font-size: 80%;
+  }
+  .description {
+    font-size: 75%;
+  }
+  .title {
+    font-size: 90%;
+  }
 }
