--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -44,6 +44,7 @@
   --darker-green: #002b24;
   --dark-green: #00684a;
   --light-green: #00db9d;
+  --pink: #f5478a;
   --black: #061621;
   --true-black: #000;
   --gray: #99a3a1;
