--- a/app/components/Nav/Nav.module.css
+++ b/app/components/Nav/Nav.module.css
@@ -54,21 +54,19 @@
   font-size: 75%;
   font-weight: 600;
   border-radius: 5px;
-  background: var(--dark-green);
+  background: var(--pink);
   color: var(--white);
-  transition: background 300ms;
-  position: relative;
-  overflow: hidden;
+  transition: 300ms;
+  box-shadow: 0px 3px 10px var(--pink);
 }
 
 .loginBtnMobile {
   padding: 6px 20px;
 }
 
-.signupBtn:hover,
-.loginBtnMobile:hover {
-  background: var(--light-green);
-  color: var(--black);
+.signupBtn:hover {
+  box-shadow: 0px 4px 20px var(--pink);
+  transform: scale(0.95);
 }
 
 .loginBtn {
