--- a/app/components/Nav/Nav.module.css
+++ b/app/components/Nav/Nav.module.css
@@ -1,7 +1,6 @@
 .wrapper {
   padding: 10px 16px;
-  position: relative;
-  border-bottom: 1px solid #c7c7c7;
+  border-bottom: 1px solid #dadada;
   position: sticky;
   top: 0;
   background: var(--white);
@@ -44,7 +43,7 @@
 }
 
 .link:hover {
-  color: var(--light-green);
+  color: var(--pink);
 }
 
 .signupBtn,
@@ -65,22 +64,13 @@
 }
 
 .signupBtn:hover {
-  box-shadow: 0px 4px 20px var(--pink);
   transform: scale(0.95);
+  box-shadow: 0px 4px 20px var(--pink);
 }
 
-.loginBtn {
-  background: transparent;
-  text-decoration: none;
-  font-size: 75%;
-  font-weight: 600;
-  color: var(--black);
-  margin-right: 25px;
-  transition: 300ms;
-}
-
-.loginBtn:hover {
-  color: var(--light-green);
+.loginBtnMobile:hover {
+  transform: scale(0.95);
+  box-shadow: 0px 4px 20px var(--pink);
 }
 
 .burger {
@@ -91,6 +81,11 @@
 
 .mobileActionContainer {
   display: none;
+}
+
+.actionContainer {
+  display: flex;
+  align-items: center;
 }
 
 @media screen and (max-width: 800px) {
