--- a/app/components/Home/Top/Top.module.css
+++ b/app/components/Home/Top/Top.module.css
@@ -38,8 +38,8 @@
 
 .getStartedBtn,
 .pricingBtn {
-  box-shadow: 0px 3px 10px var(--pink);
-  background: var(--pink);
+  box-shadow: 0px 2px 10px var(--light-green);
+  background: var(--light-green);
   color: var(--white);
   font-size: 85%;
   font-weight: 600;
@@ -56,7 +56,7 @@
 
 .getStartedBtn:hover {
   transform: scale(0.95);
-  box-shadow: 0px 4px 20px var(--pink);
+  box-shadow: 0px 4px 20px var(--light-green);
 }
 
 .pricingBtn {
