--- a/app/components/Nav/Nav.module.css
+++ b/app/components/Nav/Nav.module.css
@@ -43,7 +43,7 @@
 }
 
 .link:hover {
-  color: var(--pink);
+  color: var(--light-green);
 }
 
 .signupBtn,
@@ -53,10 +53,10 @@
   font-size: 75%;
   font-weight: 600;
   border-radius: 5px;
-  background: var(--pink);
+  background: var(--light-green);
   color: var(--white);
   transition: 300ms;
-  box-shadow: 0px 3px 10px var(--pink);
+  box-shadow: 0px 2px 10px var(--light-green);
 }
 
 .loginBtnMobile {
@@ -65,7 +65,7 @@
 
 .signupBtn:hover {
   transform: scale(0.95);
-  box-shadow: 0px 4px 20px var(--pink);
+  box-shadow: 0px 4px 20px var(--light-green);
 }
 
 .loginBtnMobile:hover {
