--- a/app/components/Plans/Switcher/Switcher.module.css
+++ b/app/components/Plans/Switcher/Switcher.module.css
@@ -1,6 +1,5 @@
 .wrapper {
   padding: 0px 16px;
-  padding-bottom: 50px;
 }
 
 .container {
@@ -11,7 +10,7 @@
   margin: auto;
 }
 
-.switch  {
+.switch {
   width: 40px;
   height: 20px;
   border-radius: 50px;
@@ -23,7 +22,7 @@
 .ball {
   height: 15px;
   width: 15px;
-  background: var(--light-green);
+  background: var(--gold);
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -31,8 +30,20 @@
 }
 
 .label {
-  font-size: 110%;
+  font-size: 80%;
   font-weight: 600;
+  padding: 4px 8px;
+  border-radius: 6px;
+}
+
+.glow {
+  font-size: 80%;
+  font-weight: 600;
+  padding: 4px 8px;
+  border-radius: 6px;
+  background: var(--gold);
+  box-shadow: 0px 3px 14px var(--gold);
+  transition: 400ms;
 }
 
 .toRight {
@@ -43,9 +54,16 @@
   animation: toLeft 600ms forwards;
 }
 
+.currentPlan {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 200%;
+  font-weight: 700;
+}
+
 @keyframes toLeft {
   0% {
-    right: 8%;
+    right: 7%;
     border-radius: 50px;
   }
   20% {
@@ -72,5 +90,3 @@
     border-radius: 50%;
   }
 }
-
-
