--- a/app/components/Plans/Switcher/Switcher.module.css
+++ b/app/components/Plans/Switcher/Switcher.module.css
@@ -31,19 +31,20 @@
 
 .label {
   font-size: 80%;
-  font-weight: 600;
+  font-weight: 500;
   padding: 4px 8px;
   border-radius: 6px;
 }
 
 .glow {
   font-size: 80%;
-  font-weight: 600;
+  font-weight: 500;
   padding: 4px 8px;
   border-radius: 6px;
   background: var(--gold);
   box-shadow: 0px 3px 14px var(--gold);
   transition: 400ms;
+  color: var(--white);
 }
 
 .toRight {
