--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -43,7 +43,7 @@
   --dark-blue: #001e2b;
   --dark-green: #00684a;
   --light-green: #06ce95;
-  --gold: #ffc16f;
+  --gold: #dfa151;
   --black: #061621;
   --true-black: #000;
   --gray: #99a3a1;
@@ -53,6 +53,7 @@
   --white: #f5f6f7;
   --shadow: #d3d3d3;
   --gray-tint: #f1f1f1;
+  --dark-gray-tint: #e2e2e2;
 }
 
 html,
