--- a/app/components/Signup/PaymentForm/Payment.module.css
+++ b/app/components/Signup/PaymentForm/Payment.module.css
@@ -22,3 +22,18 @@
   box-shadow: 0px 4px 20px var(--light-green);
   transform: scale(0.97);
 }
+
+.disabled {
+  padding: 10px;
+  width: 100%;
+  background: var(--dark-blue);
+  border: none;
+  border-radius: 6px;
+  font-family: "Gilroy", sans-serif;
+  color: var(--white);
+  font-weight: 600;
+  font-size: 75%;
+  cursor: default;
+  transition: 300ms;
+  height: 38px;
+}
