--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -44,6 +44,7 @@
   --dark-green: #00684a;
   --light-green: #06ce95;
   --gold: #dfa151;
+  --red: #e6375d;
   --black: #061621;
   --true-black: #000;
   --gray: #99a3a1;
