--- a/app/components/Login/LoginForm.module.css
+++ b/app/components/Login/LoginForm.module.css
@@ -2,11 +2,194 @@
   padding: 16px;
 }
 
-.container {
+/* .containerWrapper {
+  border-radius: 10px;
+  padding: 2px;
+  background: linear-gradient(to right, #fc00ff, #00dbde);
   max-width: 400px;
   margin: auto;
-  border-radius: 10px;
   box-shadow: 0px 10px 30px var(--shadow);
-  padding: 20px;
+} */
+
+.container {
+  max-width: 400px;
+  border-radius: 10px;
+  padding: 30px;
+  margin: auto;
   margin-top: 20px;
+  box-shadow: 0px 10px 30px var(--shadow);
+}
+
+.title {
+  font-size: 120%;
+  font-weight: 800;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.inputContainer {
+  position: relative;
+  width: 100%;
+  margin-bottom: 35px;
+}
+
+.input {
+  width: 100%;
+  padding: 14px 10px;
+  font-family: "Gilroy", sans-serif;
+  font-weight: 700;
+  color: var(--black);
+  border: none;
+  outline: none;
+  border-radius: 6px;
+  box-shadow: 0px 3px 6px var(--shadow);
+  transition: 300ms;
+}
+
+.input:focus,
+.input:hover {
+  box-shadow: 0px 4px 18px var(--shadow);
+}
+
+.inputContainer:focus-within .label {
+  top: -2px;
+  font-size: 60%;
+  background: var(--black);
+  color: var(--white);
+  padding: 1px 6px;
+  border-radius: 4px;
+}
+
+.label {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  font-weight: 600;
+  font-size: 70%;
+  transition: 300ms;
+  pointer-events: none;
+}
+
+.filled {
+  top: -2px;
+  font-size: 60%;
+  background: var(--black);
+  color: var(--white);
+  left: 10px;
+  font-weight: 600;
+  padding: 1px 6px;
+  position: absolute;
+  transform: translateY(-50%);
+  border-radius: 4px;
+}
+
+.checkBoxContainer {
+  display: flex;
+  align-items: center;
+  margin-left: 2px;
+}
+
+.checkBox {
+  height: 20px;
+  width: 20px;
+  border-radius: 4px;
+  background: #fff;
+  box-shadow: 0px 2px 7px var(--shadow);
+  margin-right: 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #baffdd;
+  background: var(--dark-blue);
+  background: var(--gold);
+  transition: 300ms;
+}
+
+.checkBox:hover {
+  box-shadow: 0px 3px 12px var(--shadow);
+}
+
+.checkBoxLabel {
+  font-weight: 600;
+  font-size: 70%;
+}
+
+.submitBtn {
+  padding: 10px;
+  width: 100%;
+  background: var(--light-green);
+  border: none;
+  border-radius: 6px;
+  font-family: "Gilroy", sans-serif;
+  color: var(--white);
+  font-weight: 600;
+  font-size: 75%;
+  cursor: pointer;
+  box-shadow: 0px 2px 10px var(--light-green);
+  transition: 300ms;
+  height: 38px;
+}
+
+.submitBtn:hover {
+  box-shadow: 0px 4px 20px var(--light-green);
+  transform: scale(0.97);
+}
+
+.disabled {
+  padding: 10px;
+  width: 100%;
+  background: var(--dark-blue);
+  border: none;
+  border-radius: 6px;
+  font-family: "Gilroy", sans-serif;
+  color: var(--white);
+  font-weight: 600;
+  font-size: 75%;
+  cursor: default;
+  transition: 300ms;
+  height: 38px;
+}
+
+.error {
+  position: absolute;
+  margin-top: 4px;
+  font-size: 60%;
+  color: red;
+  font-weight: 600;
+  margin-left: 5px;
+  transition: 300ms;
+  pointer-events: none;
+}
+
+.forgotPasswordLink {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 70%;
+  font-weight: 500;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  color: var(--black);
+}
+
+.linkContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  font-size: 70%;
+}
+
+.accountParagraph {
+  font-weight: 500;
+  margin-right: 10px;
+}
+
+.createAccountLink {
+  font-weight: 700;
+  color: var(--blue);
+  display: flex;
+  align-items: center;
 }
