--- a/app/components/Plans/Switcher/Switcher.module.css
+++ b/app/components/Plans/Switcher/Switcher.module.css
@@ -14,15 +14,16 @@
   width: 40px;
   height: 20px;
   border-radius: 50px;
-  background: var(--true-black);
+  background: #fff;
   position: relative;
   cursor: pointer;
+  box-shadow: 0px 2px 4px var(--shadow);
 }
 
 .ball {
   height: 15px;
   width: 15px;
-  background: var(--gold);
+  background: var(--blue);
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -41,8 +42,8 @@
   font-weight: 500;
   padding: 4px 8px;
   border-radius: 6px;
-  background: var(--gold);
-  box-shadow: 0px 3px 14px var(--gold);
+  background: var(--blue);
+  box-shadow: 0px 3px 14px var(--blue);
   transition: 400ms;
   color: var(--white);
 }
