--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -43,8 +43,10 @@
   --dark-blue: #001e2b;
   --dark-green: #00684a;
   --light-green: #06ce95;
+  --pastel-green: #baffdd;
   --gold: #dfa151;
   --red: #e6375d;
+  --blue: #686bff;
   --black: #061621;
   --true-black: #000;
   --gray: #99a3a1;
