--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -43,6 +43,7 @@
   --dark-blue: #001e2b;
   --dark-green: #00684a;
   --light-green: #06ce95;
+  --forest-green: #4b917e;
   --pastel-green: #baffdd;
   --gold: #dfa151;
   --red: #e6375d;
