--- a/app/components/Admin/Nav/DropDowns/AccountDropDown/AccountDropDown.module.css
+++ b/app/components/Admin/Nav/DropDowns/AccountDropDown/AccountDropDown.module.css
@@ -1,11 +1,11 @@
 .wrapper {
-  padding-top: 20px;
+  padding-top: 26px;
   position: absolute;
   top: 30px;
   right: 0px;
   /* width: 130px; */
   width: 220px;
-  transition: 300ms;
+  transition: 400ms;
 }
 
 .show {
@@ -28,12 +28,26 @@
   border-radius: 8px;
 }
 
+.container::after {
+  height: 20px;
+  width: 20px;
+  background: #fff;
+  content: "";
+  display: block;
+  top: 19px;
+  right: 45px;
+  transform: rotate(45deg);
+  position: absolute;
+  border-radius: 2px;
+}
+
 .link {
   padding: 10px 16px;
   color: var(--black);
   text-decoration: none;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .link:hover .iconContainer {
