--- a/app/components/Plans/Switcher/Switcher.module.css
+++ b/app/components/Plans/Switcher/Switcher.module.css
@@ -17,13 +17,13 @@
   background: #fff;
   position: relative;
   cursor: pointer;
-  box-shadow: 0px 2px 4px var(--shadow);
+  box-shadow: 0px 2px 12px var(--shadow);
 }
 
 .ball {
   height: 15px;
   width: 15px;
-  background: var(--blue);
+  background: var(--forest-green);
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -42,8 +42,8 @@
   font-weight: 500;
   padding: 4px 8px;
   border-radius: 6px;
-  background: var(--blue);
-  box-shadow: 0px 3px 14px var(--blue);
+  background: var(--forest-green);
+  box-shadow: 0px 3px 14px var(--forest-green);
   transition: 400ms;
   color: var(--white);
 }
