--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -47,7 +47,7 @@
   --pastel-green: #baffdd;
   --gold: #dfa151;
   --red: #e6375d;
-  --blue: #686bff;
+  --blue: #5154ff;
   --black: #061621;
   --true-black: #000;
   --gray: #99a3a1;
