--- a/app/components/Admin/Profile/Name/Name.module.css
+++ b/app/components/Admin/Profile/Name/Name.module.css
@@ -1,6 +1,11 @@
 .container {
+  border: 1px solid var(--shadow);
+  border-radius: 6px;
+  transition: 300ms;
+}
+
+.title {
+  font-weight: 700;
+  border-bottom: 1px solid var(--shadow);
   padding: 20px;
-  width: 100%;
-  background: #fff;
-  box-shadow: 0px 5px 20px var(--shadow);
 }
