--- a/app/components/Admin/Profile/Password/Password.module.css
+++ b/app/components/Admin/Profile/Password/Password.module.css
@@ -2,7 +2,6 @@
   border: 1px solid var(--shadow);
   border-radius: 6px;
   transition: 300ms;
-  margin-bottom: 20px;
 }
 
 .header {
@@ -17,6 +16,7 @@
 .mainContainer {
   padding: 30px 20px;
   display: flex;
+  padding-bottom: 15px;
 }
 
 .inputContainer {
@@ -120,4 +120,36 @@
   box-shadow: none;
   cursor: default;
   border: 1px solid var(--shadow);
+}
+
+.switchContainer {
+  padding: 30px 20px;
+  padding-top: 0px;
+  display: flex;
+  align-items: center;
+}
+
+.switch {
+  height: 16px;
+  width: 30px;
+  background: #000;
+  border-radius: 500px;
+  margin-right: 10px;
+  cursor: pointer;
+  padding: 4px;
+  display: flex;
+}
+
+.ball,
+.right {
+  height: 8px;
+  width: 8px;
+  border-radius: 50%;
+  background: #fff;
+  transition: 300ms;
+  background: var(--light-green);
+}
+
+.right {
+  transform: translateX(14px);
 }
