--- a/app/components/Admin/Nav/SideNav/SideNav.module.css
+++ b/app/components/Admin/Nav/SideNav/SideNav.module.css
@@ -2,12 +2,17 @@
   background: #fff;
   height: 100vh;
   width: 230px;
+  min-width: 230px;
   box-shadow: 0px 0px 10px var(--shadow);
+  position: sticky;
+  top: 0;
+  overflow: auto;
 }
 
 .container {
   display: flex;
   flex-direction: column;
+  padding-bottom: 50px;
 }
 
 .title {
