--- a/app/components/Admin/Profile/Avatar/Avatar.module.css
+++ b/app/components/Admin/Profile/Avatar/Avatar.module.css
@@ -2,24 +2,21 @@
   border: 1px solid var(--shadow);
   border-radius: 6px;
   transition: 300ms;
+  margin-bottom: 20px;
 }
 
 .header {
   padding: 10px 20px;
   border-bottom: 1px solid var(--shadow);
-  display: flex;
-  align-items: center;
 }
 
 .title {
   font-weight: 700;
-  margin-right: 7px;
 }
 
 .mainContainer {
   padding: 30px 20px;
   display: flex;
-  padding-bottom: 15px;
 }
 
 .inputContainer {
@@ -123,72 +120,4 @@
   box-shadow: none;
   cursor: default;
   border: 1px solid var(--shadow);
-}
-
-.switchContainer {
-  padding: 30px 20px;
-  padding-top: 0px;
-  display: flex;
-  align-items: center;
-}
-
-.switch {
-  height: 16px;
-  width: 30px;
-  background: #000;
-  border-radius: 500px;
-  margin-right: 10px;
-  cursor: pointer;
-  padding: 4px;
-  display: flex;
-}
-
-.ball,
-.right {
-  height: 8px;
-  width: 8px;
-  border-radius: 50%;
-  background: #fff;
-  transition: 300ms;
-  background: var(--light-green);
-}
-
-.right {
-  transform: translateX(14px);
-}
-
-.tooltip {
-  background: #fff;
-  padding: 4px;
-  border-radius: 6px;
-  box-shadow: -2px 3px 12px var(--shadow);
-  margin-left: 10px;
-  position: relative;
-  z-index: 1;
-  transition: 300ms;
-  pointer-events: none;
-}
-
-.tooltip::after {
-  height: 12px;
-  width: 12px;
-  background: #fff;
-  border-radius: 2px;
-  position: absolute;
-  display: block;
-  content: "";
-  left: -3px;
-  top: 50%;
-  transform: translateY(-50%) rotate(45deg);
-  z-index: -1;
-}
-
-.hide {
-  opacity: 0;
-  transform: translateX(10px);
-}
-
-.show {
-  opacity: 1;
-  transform: translateX(0);
 }
