--- a/app/components/Admin/Settings/Subscription/Subscription.module.css
+++ b/app/components/Admin/Settings/Subscription/Subscription.module.css
@@ -37,6 +37,10 @@
   transition: 300ms;
   background: #fff;
   border: 1px solid var(--shadow);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
 }
 
 /* .input:focus,
@@ -86,10 +90,15 @@
   justify-content: space-between;
 }
 
-.footerText {
+.footerText,
+.inputText {
   font-size: 65%;
   font-weight: 600;
   color: var(--dark-gray);
+}
+
+.inputText {
+  color: var(--black);
 }
 
 .confirmBtn,
@@ -131,4 +140,30 @@
   box-shadow: none;
   cursor: default;
   border: 1px solid var(--shadow);
+}
+
+.dropDownContainer {
+  position: absolute;
+  width: 100%;
+  top: 50px;
+  border-radius: 6px;
+  /* border: 1px solid var(--shadow); */
+  overflow: hidden;
+  box-shadow: 0px 4px 14px var(--shadow);
+  transition: 300ms;
+}
+
+.dropDownSelection {
+  padding: 8px 10px;
+  background: #fff;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  font-size: 65%;
+  cursor: pointer;
+  transition: 300ms;
+}
+
+.dropDownSelection:hover {
+  background: var(--gray-tint);
 }
