--- a/app/components/Admin/Settings/Subscription/Subscription.module.css
+++ b/app/components/Admin/Settings/Subscription/Subscription.module.css
@@ -103,7 +103,8 @@
 
 .confirmBtn,
 .disabled,
-.cancelBtn {
+.cancelBtn,
+.renewBtn {
   padding: 3px 14px;
   border: none;
   border-radius: 4px;
@@ -126,12 +127,15 @@
 .cancelBtn {
   margin-right: 5px;
   background: red;
-  box-shadow: 0px 2px 8px red;
   border: 1px solid red;
+  box-shadow: none;
 }
 
-.cancelBtn:hover {
-  box-shadow: 0px 4px 12px red;
+.renewBtn {
+  margin-right: 5px;
+  background: var(--light-green);
+  border: 1px solid var(--light-green);
+  box-shadow: none;
 }
 
 .disabled {
@@ -166,4 +170,27 @@
 
 .dropDownSelection:hover {
   background: var(--gray-tint);
+}
+
+.cancelDate,
+.currentPlan {
+  font-size: 60%;
+  font-weight: 600;
+  margin-top: 12px;
+  background: #fff;
+  border: 1px solid #ff0000;
+  color: #ff0000;
+  padding: 4px;
+  border-radius: 4px;
+  width: fit-content;
+}
+
+.currentPlan {
+  margin-top: 0;
+  margin-bottom: 12px;
+  border: none;
+  background: var(--dark-gray-tint);
+  color: #000;
+  border: 1px solid var(--shadow);
+  text-transform: capitalize;
 }
