--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -48,6 +48,7 @@
   --gold: #dfa151;
   --red: #e6375d;
   --blue: #5154ff;
+  --light-blue: #2299dd;
   --black: #061621;
   --true-black: #000;
   --gray: #99a3a1;
