--- a/app/components/Admin/Nav/SideNav/SideNav.module.css
+++ b/app/components/Admin/Nav/SideNav/SideNav.module.css
@@ -47,7 +47,7 @@
 
 .link {
   padding: 10px 20px;
-  font-size: 75%;
+  font-size: 70%;
   font-weight: 500;
   color: var(--gray);
   text-decoration: none;
@@ -64,8 +64,8 @@
 
 .selectedLink {
   padding: 10px 20px;
-  font-size: 75%;
-  font-weight: 500;
+  font-size: 70%;
+  font-weight: 700;
   text-decoration: none;
   transition: 300ms;
   width: 100%;
@@ -77,7 +77,7 @@
 
 .bar {
   width: 3px;
-  background: var(--blue);
+  background: var(--dark-green);
   position: absolute;
   height: 0px;
   transition: 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -94,7 +94,7 @@
 .filled {
   height: 100%;
   width: 3px;
-  background: var(--blue);
+  background: var(--dark-green);
   position: absolute;
   transition: 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
   left: 0;
