--- a/app/components/Admin/Dashboard/Storage/Storage.module.css
+++ b/app/components/Admin/Dashboard/Storage/Storage.module.css
@@ -1,17 +1,47 @@
 .container {
-	padding: 20px;
-	border-radius: 10px;
-	background: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  background: #fff;
+  width: 33%;
+  box-shadow: 0px 4px 16px var(--shadow);
+}
+
+.flexContainer {
+  display: flex;
+  justify-content: space-between;
 }
 
 .title {
-	font-weight: 700;
-	font-size: 90%;
-	margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 90%;
+  display: flex;
+  align-items: center;
 }
 
-.progressBarContainer {
-	margin-top: 10px;
-	padding: 10px;
-	height: 10px;
+.progressRingContainer {
+  position: relative;
+  width: fit-content;
+}
+
+.progressRing {
+  transform: rotate(-90deg);
+}
+
+.percent {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: 600;
+  font-size: 90%;
+}
+
+.cloudContainer {
+  margin: auto;
+  text-align: center;
+}
+
+.size {
+  font-size: 80%;
+  font-weight: 600;
 }
