--- a/app/components/Admin/Nav/SideNav/SideNav.module.css
+++ b/app/components/Admin/Nav/SideNav/SideNav.module.css
@@ -77,7 +77,7 @@
 
 .bar {
   width: 3px;
-  background: var(--dark-green);
+  background: var(--light-green);
   position: absolute;
   height: 0px;
   transition: 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -94,7 +94,7 @@
 .filled {
   height: 100%;
   width: 3px;
-  background: var(--dark-green);
+  background: var(--light-green);
   position: absolute;
   transition: 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
   left: 0;
