--- a/app/components/Admin/Dashboard/Storage/Storage.module.css
+++ b/app/components/Admin/Dashboard/Storage/Storage.module.css
@@ -3,12 +3,15 @@
   border-radius: 10px;
   background: #fff;
   width: 33%;
+  min-width: 240px;
   box-shadow: 0px 4px 16px var(--shadow);
+  margin-right: 15px;
 }
 
 .flexContainer {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .title {
@@ -16,6 +19,7 @@
   font-size: 90%;
   display: flex;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .progressRingContainer {
@@ -33,15 +37,17 @@
   top: 50%;
   transform: translate(-50%, -50%);
   font-weight: 600;
-  font-size: 90%;
+  font-size: 85%;
 }
 
-.cloudContainer {
-  margin: auto;
-  text-align: center;
+.remainingText {
+  font-size: 70%;
+  font-weight: 500;
+  color: var(--gray);
+  margin-bottom: 20px;
 }
 
-.size {
-  font-size: 80%;
+.sizeText {
+  font-size: 65%;
   font-weight: 600;
 }
